--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^10.4.15",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.15",
+    "@nestjs/common": "^10.3.10",
+    "@nestjs/config": "^3.1.0",
+    "@nestjs/core": "^10.3.10",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.2",
-    "@nestjs/swagger": "^11.0.2",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@turf/turf": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/hapi__joi": "^17.1.14",
@@ -38,12 +39,13 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "geojson": "^0.5.0",
     "joi": "^17.13.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
-    "reflect-metadata": "^0.2.2",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
   },
@@ -58,8 +60,6 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
